--- a/client/src/app/authentication/view/login-view.component.html
+++ b/client/src/app/authentication/view/login-view.component.html
@@ -4,7 +4,7 @@
       <h2 class="fs-xxl fw-500 mt-4 text-white">
         Beaver
         <small class="h3 fw-300 mt-3 mb-5 text-white opacity-60">
-          Azurlane Database project
+          Azurlane WIKI
         </small>
       </h2>
     </div>
