#15 Add toastr Css

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,3 +2,4 @@
 @import "assets/css/app.bundle.css";
 @import "assets/css/vendors.bundle.css";
 @import "assets/css/beaver.css";
+@import '~ngx-toastr/toastr';
